Make sure uneven column/row spans are displayed correctly

--- a/gTile@shuairan/files/gTile@shuairan/3.8/stylesheet.css
+++ b/gTile@shuairan/files/gTile@shuairan/3.8/stylesheet.css
@@ -20,6 +20,7 @@
 .table-element{
     background-color: rgba(240,240,240,0.4);
     border-radius: 3px;
+    margin: 2px;
 }
 
 .table-element:hover, .table-element:activate
